# dividend

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  lib_backup.rs  lib_minutes.rs
