[package]
name = "Dividend Protocol"
version = "0.1.0"
description = "Dividend Protocol Staking Vault"
edition = "2025"

[lib]
crate-type = ["cdylib", "lib"]
name = "dividend_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-security-txt = "1.1.1"
borsh = "0.10.3"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1